--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+public/uploads/*
+
+# Ignore all image file
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
